--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://github.com/inesr19/My-Portfolio",
+  "homepage": "http://inesr19.github.io/My-Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
